Added clone_paths support